[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4.19"
serialport = "4.2.0"
crc = "3.0.0"
rand = "0.8.5"
cgmath = "0.18.0"

[build-dependencies]
cc = "1.0.73"
